exercicio iframe 003 atualização

--- a/exercicios/Ex024/iframe003.html
+++ b/exercicios/Ex024/iframe003.html
@@ -33,8 +33,10 @@
 
 
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Distinctio impedit repellendus, quas obcaecati voluptate minus autem libero soluta ex nihil similique quidem aspernatur sunt officiis quasi nesciunt rerum unde aperiam. Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatem sunt harum quis maxime officiis consequatur, quibusdam distinctio impedit officia inventore eum beatae corrupti error ducimus animi expedita debitis ea aut?</p>
+   
+    <!--como colocar conteudo dentro do iframe-->
 
-    <iframe id="tela" name="frame" src="">
+    <iframe id="tela" name="frame" srcdoc="<h1>Escolha uma das opições acima </h1><p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Id, qui illum, quia quibusdam soluta necessitatibus minima quidem doloremque odio facere, non eum reiciendis sint dolor quo saepe accusantium debitis placeat!</p">
         <p>Infelizmente seu navegador não é compativel com isso.</p>
     </iframe>
 
