--- a/exercicios/ex026/mq005/index.html
+++ b/exercicios/ex026/mq005/index.html
@@ -4,13 +4,19 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Media Query</title>
+    <title>Media Query</title> 
+    <!--MENU HAMBURGUER-->
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
     <link rel="stylesheet" href="estilos/style.css">
 </head>
 <body>
     <header>
         <h1>Meu site</h1>
-        <menu>
+        <!--APARECER MENU HAMBURGUER-->
+        <span id="burger" class="material-symbols-outlined" onclick="clickMenu()">
+            menu
+            </span>
+        <menu id="itens">
             <ul>
                 <li><a href="#">Opção 1</a></li>
                 <li><a href="#">Opção 2</a></li>
@@ -29,6 +35,15 @@
 
             <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Non, veniam. Aspernatur tempora quidem quasi quam ipsa necessitatibus eaque totam rem. Quam quis, aliquam quo nemo adipisci officia architecto voluptate maiores. Lorem ipsum dolor sit amet consectetur adipisicing elit. Necessitatibus aliquam consectetur ratione, porro, quae illum aperiam delectus est ullam sint esse, et corporis architecto aut cupiditate soluta quasi sed possimus?</p>
         </article>
-    </main>
+    </main> <!--configuraçao menu hamburguer-->
+    <script> 
+        function clickMenu() {
+            if (itens.style.display == 'block') {
+                itens.style.display = 'none'
+            } else {
+                itens.style.display = 'block'
+            }
+        }
+    </script>
 </body>
 </html>
